dc-blue.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    k8s.v1.cni.cncf.io/networks-status: ""
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      deployment; cpu, memory limit for container deployment'
    openshift.io/deployment-config.name: blue
    openshift.io/deployment.name: blue-1
    openshift.io/scc: restricted
  creationTimestamp: "2020-04-28T08:02:16Z"
  labels:
    openshift.io/deployer-pod-for.name: blue-1
  name: blue-1-deploy
  namespace: vp-bluegreen
  ownerReferences:
  - apiVersion: v1
    kind: ReplicationController
    name: blue-1
    uid: 93416b52-8926-11ea-b15f-0e18b0a4b171
  resourceVersion: "39851813"
  selfLink: /api/v1/namespaces/vp-bluegreen/pods/blue-1-deploy
  uid: 93531aab-8926-11ea-b15f-0e18b0a4b171
spec:
  activeDeadlineSeconds: 21600
  containers:
  - env:
    - name: OPENSHIFT_DEPLOYMENT_NAME
      value: blue-1
    - name: OPENSHIFT_DEPLOYMENT_NAMESPACE
      value: vp-bluegreen
    image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:29e8526c0a87b83638cf664b363733f79bc042043917ab3a93cc8c1caa3351e4
    imagePullPolicy: IfNotPresent
    name: deployment
    resources:
      limits:
        cpu: 500m
        memory: 1536Mi
      requests:
        cpu: 5m
        memory: 50Mi
    securityContext:
      capabilities:
        drop:
        - KILL
        - MKNOD
        - SETGID
        - SETUID
      runAsUser: 1063310000
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: deployer-token-t9ln5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: deployer-dockercfg-cft9l
  nodeName: ip-10-0-148-0.ec2.internal
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 1063310000
    seLinuxOptions:
      level: s0:c252,c29
  serviceAccount: deployer
  serviceAccountName: deployer
  shareProcessNamespace: false
  terminationGracePeriodSeconds: 10
  tolerations:
  - effect: NoSchedule
    key: node.kubernetes.io/memory-pressure
    operator: Exists
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: deployer-token-t9ln5
    secret:
      defaultMode: 420
      secretName: deployer-token-t9ln5
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-04-28T08:02:16Z"
    reason: PodCompleted
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-04-28T08:02:38Z"
    reason: PodCompleted
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-04-28T08:02:38Z"
    reason: PodCompleted
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-04-28T08:02:16Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://37e50da36c6ddfab530f12033ca493a412055df98a5df515aa01ab2eb404c0f1
    image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:29e8526c0a87b83638cf664b363733f79bc042043917ab3a93cc8c1caa3351e4
    imageID: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:29e8526c0a87b83638cf664b363733f79bc042043917ab3a93cc8c1caa3351e4
    lastState: {}
    name: deployment
    ready: false
    restartCount: 0
    state:
      terminated:
        containerID: cri-o://37e50da36c6ddfab530f12033ca493a412055df98a5df515aa01ab2eb404c0f1
        exitCode: 0
        finishedAt: "2020-04-28T08:02:38Z"
        reason: Completed
        startedAt: "2020-04-28T08:02:25Z"
  hostIP: 10.0.148.0
  phase: Succeeded
  podIP: 10.128.11.112
  qosClass: Burstable
  startTime: "2020-04-28T08:02:16Z"
