svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/aditi10/bluegreen.git
  creationTimestamp: "2020-04-28T07:59:41Z"
  labels:
    app: blue
    app.kubernetes.io/component: blue
    app.kubernetes.io/instance: blue
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: blue
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: "7.2"
  name: blue
  namespace: vp-bluegreen
  resourceVersion: "39850380"
  selfLink: /api/v1/namespaces/vp-bluegreen/services/blue
  uid: 36d9e86a-8926-11ea-8a32-12f1c648b1b9
spec:
  clusterIP: 172.30.68.49
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue
    deploymentconfig: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
